# RandomCode

./: .gitignore  README.md
Linux/: pipe.py  pipes.sh  signals.c
Linux/systemd/: timers.sh
R/: metaprog.R
R/BasicPackageSkel/: DESCRIPTION
R/BasicPackageSkel/R/: main.R
R/BasicPackageSkel/misc/: package_install.sh
R/CompiledCode/: .Rbuildignore  NAMESPACE  script.sh
R/CompiledCode/R/: main.R
R/CompiledCode/misc/: .gitignore  package_install.sh  standalone_ex.R
R/CompiledCode/misc/standalone/: Makevars  example_1.c  example_2.cpp  runme.sh  standalone_ex.R
R/CompiledCode/src/: Makevars  example.c  example2.cpp
R/reporteR/: invisible.R  stubs.R
Stan/: NonCentered.R  Truncation.R
asm/: .gitignore
asm/OLD/: func.asm  stack.asm  testing.asm
asm/call-C/: callc.asm
asm/call-asm/: add42.asm  add42call.c  build.sh
asm/call-c-printf/: build.sh  cprintf.s
asm/exit/: build.sh  exit.asm
asm/file-read/: buildme.sh  example.txt  read.asm
asm/file-write/: helloworld.asm
asm/floats/: build.sh  float.asm  float.c
asm/helloworld/: helloworld_print.asm
asm/helloworld-print/: build.sh
asm/memlook-f/: build.sh  memlook.asm
asm/printf-c/: build.sh
asm/upper-lower-registers/: build.sh  upper-lower.asm
asm/xxx-old/: compile_it.sh  flags.c  printfun.asm
cmake/: .gitignore  CMakeLists.txt
cmake/BigExample/include/: version.h.in
cmake/BigExample/mylib/: .gitignore  CMakeLists.txt
cmake/BigExample/mylib/include/: adder.hpp
cmake/BigExample/src/: arrow.cpp  main.cpp
cmake/CTest/: .gitignore  CMakeLists.txt  build.sh
cmake/CTest/tests/: main.cpp  test.sh
cmake/ExternalProj/: CMakeLists.txt  main.cpp  runme.sh
cmake/Options/: CMakeLists.txt
cmake/cmake/: FindASDF.cmake
cmake/scripts/: generate_test_data.R  misc.sh
cpp/: .gitignore  Constructors.cpp  Conversion.cpp  Functional.cpp  Maps.cpp  README.md  Regex.cpp  StructuredBindings.cpp  TrailingReturn.cpp  TypeTraits.cpp  Unions.cpp  Vtable.cpp
cpp-linking/: .gitignore  build.sh  main_foobar.cpp
cpp-linking/foo/: foo.h
cpp-linking/foobar/: foobar.cpp
cpp-linking/liba/: mylib.h
cpp-linking/libb/: mylib.h
cpp/Catch2/: CMakeLists.txt  build.sh
cpp/Catch2/include/: math.hpp  math2.hpp
cpp/Catch2/src/: math.cpp  math2.cpp
cpp/Catch2/tests/: CMakeLists.txt  test_math.cpp  test_math2.cpp
cpp/functional/: CMakeLists.txt  main.cpp
cpp/linking/: build.sh  main.cpp
cpp/linking/bar/: bar.cpp  bar.h
cpp/linking/foo/: foo.cpp
cpp/linking/foobar/: foobar.h
cpp/linking/liba/: mylib.cpp
cpp/linking/libb/: mylib.cpp
cpp/linking/libc/: mylib.cpp
cpp/regex/: buildme.sh
cpp/spdlog/: CMakeLists.txt  buildme.sh  main.cpp
misc-experiments/: buildme.sh  envvars.c  floatingpoint.c  forking.c  metaprog.R
